y.output
Grammar

    0 $accept: Start $end

    1 Start: PROGRAM_NAME BEGIN STMT_LIST ';' END

    2 STMT_LIST: STMT ';'
    3          | STMT_LIST ';' STMT

    4 STMT: DECLARE VLIST AS TYPE

    5 VLIST: VNAME
    6      | VLIST ',' VNAME


Terminals, with rules where they appear

    $end (0) 0
    ',' (44) 6
    ';' (59) 1 2 3
    error (256)
    TYPE <type> (258) 4
    VNAME <v_name> (259) 5 6
    PROGRAM_NAME (260) 1
    BEGIN (261) 1
    END (262) 1
    DECLARE (263) 4
    AS (264) 4


Nonterminals, with rules where they appear

    $accept (12)
        on left: 0
    Start (13)
        on left: 1
        on right: 0
    STMT_LIST (14)
        on left: 2 3
        on right: 1 3
    STMT (15)
        on left: 4
        on right: 2 3
    VLIST (16)
        on left: 5 6
        on right: 4 6


State 0

    0 $accept: . Start $end

    PROGRAM_NAME  shift, and go to state 1

    Start  go to state 2


State 1

    1 Start: PROGRAM_NAME . BEGIN STMT_LIST ';' END

    BEGIN  shift, and go to state 3


State 2

    0 $accept: Start . $end

    $end  shift, and go to state 4


State 3

    1 Start: PROGRAM_NAME BEGIN . STMT_LIST ';' END

    DECLARE  shift, and go to state 5

    STMT_LIST  go to state 6
    STMT       go to state 7


State 4

    0 $accept: Start $end .

    $default  accept


State 5

    4 STMT: DECLARE . VLIST AS TYPE

    VNAME  shift, and go to state 8

    VLIST  go to state 9


State 6

    1 Start: PROGRAM_NAME BEGIN STMT_LIST . ';' END
    3 STMT_LIST: STMT_LIST . ';' STMT

    ';'  shift, and go to state 10


State 7

    2 STMT_LIST: STMT . ';'

    ';'  shift, and go to state 11


State 8

    5 VLIST: VNAME .

    $default  reduce using rule 5 (VLIST)


State 9

    4 STMT: DECLARE VLIST . AS TYPE
    6 VLIST: VLIST . ',' VNAME

    AS   shift, and go to state 12
    ','  shift, and go to state 13


State 10

    1 Start: PROGRAM_NAME BEGIN STMT_LIST ';' . END
    3 STMT_LIST: STMT_LIST ';' . STMT

    END      shift, and go to state 14
    DECLARE  shift, and go to state 5

    STMT  go to state 15


State 11

    2 STMT_LIST: STMT ';' .

    $default  reduce using rule 2 (STMT_LIST)


State 12

    4 STMT: DECLARE VLIST AS . TYPE

    TYPE  shift, and go to state 16


State 13

    6 VLIST: VLIST ',' . VNAME

    VNAME  shift, and go to state 17


State 14

    1 Start: PROGRAM_NAME BEGIN STMT_LIST ';' END .

    $default  reduce using rule 1 (Start)


State 15

    3 STMT_LIST: STMT_LIST ';' STMT .

    $default  reduce using rule 3 (STMT_LIST)


State 16

    4 STMT: DECLARE VLIST AS TYPE .

    $default  reduce using rule 4 (STMT)


State 17

    6 VLIST: VLIST ',' VNAME .

    $default  reduce using rule 6 (VLIST)
